Removed some redundancy and Login graphics bug